--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,1 @@
-
-body {
-    background-color: #111;
-    color: white;
-    font-family: Arial, sans-serif;
-    text-align: center;
-}
-header img {
-    margin-top: 20px;
-}
-button {
-    margin: 10px;
-    padding: 10px 20px;
-    font-size: 16px;
-}
+body { background: #111; color: #fff; }
